--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,17 @@ td {
   border-radius: 5px;
   margin-bottom: 15px; }
 
+.round_box {
+  padding: 10px 10px 0px 10px;
+  margin: 20px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  display: inline-block; }
+
+.stats {
+  font-weight: bold;
+  font-size: small; }
+
 /**
  * Site header
  */
