--- a/experiments/gt-no/translator.css
+++ b/experiments/gt-no/translator.css
@@ -114,8 +114,9 @@ th {
 }
 .modcontent {
   width: 50%;
-  height: 55%;
-  margin: 100px auto;
+  height: 95%;
+  top: 0;
+  margin: 15px auto;
   background-color: #fff;
   border: 1px solid #000;
   padding: 15px;
