update index page + translator button

--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,7 @@ td {
   font-size: xx-large;
   font-weight: bold;
   color: #fff;
+  cursor: pointer;
   border-radius: 10px;
   padding: 10px;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+0,2989d8+50,207cca+51,7db9e8+100;Blue+Gloss+Default */
