--- a/translator/css/translator.css
+++ b/translator/css/translator.css
@@ -8,20 +8,18 @@ bottom: 50px;
 overflow: auto; 
 }*/
 #frametop, #framebottom {
-  position: fixed; 
-  top: 10px;   
-  width: 100%; 
+  top: 10px;
+  width: 100%;
   height: 100px;
   overflow: hidden;
 }
 #framebottom {
   top: auto;
-  bottom: 0; 
+  bottom: 0;
   height: 100px;
   overflow: hidden;
 }
 #dynamic_content {
-  position: fixed; 
   top: 105px;
   bottom: 100px;
   overflow: auto;
@@ -61,6 +59,7 @@ textarea {
 }
 .thumbnail {
   width: 50px;
+  min-width: 150px;
 }
 .revthumb {
   width: 100px;
@@ -158,4 +157,29 @@ button a {
   border: none;
   background: transparent;
   padding: 0;
+}
+#rev_btn {
+  max-width: inherit;
+}
+#story_table td {
+  display: block;
+}
+#story_table th {
+  display: none;
+}
+
+/* Larger than mobile screen */
+@media (min-width: 40.0rem) {
+  #story_table td {
+    display: table-cell;
+  }
+  #story_table th {
+    display: table-cell;
+  }
+  #frametop, #framebottom {
+    position: fixed;
+  }
+  #dynamic_content {
+    position: fixed;
+  }
 }
